--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -7,7 +7,7 @@
       <input type="text" id="post-title" name="post-title" />
     </div>
     <div>
-      <label for="post-body">Link</label>
+      <label for="post-body">Post Text</label>
       <input id="post-body" name="post-body" />
     </div>
     <button type="submit" class="btn">Create</button>
