--- a/views/partials/post-info.handlebars
+++ b/views/partials/post-info.handlebars
@@ -1,10 +1,9 @@
 <article class="post">
   <div class="title">
-    <a href="{{post_url}}" target="_blank">{{title}}</a>
-    <span>({{format_url post_url}})</span>
+    <p>{{title}}</p>
   </div>
   <div class="meta">
-    by {{user.username}} on {{format_date created_at}}
+    by {{user.username}} on {{format_date createdAt}}
     |
     <a href="/post/{{id}}">{{comments.length}} {{format_plural "comment" comments.length}}</a>
   </div>
