--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -12,7 +12,7 @@ body, html {
 
 a {
   text-decoration: none;
-  color: #225ca3;
+  color: brown;
   font-weight: bold;
   transition: color .1s;
 }
@@ -80,10 +80,12 @@ header {
   justify-content: space-between;
   align-items: center;
   padding: 0 1%;
+  background-color: brown;
 }
 
 header h1 {
   font-size: 1em;
+  background-color: gainsboro;
 }
 
 main {
