--- a/views/edit-post.handlebars
+++ b/views/edit-post.handlebars
@@ -6,10 +6,10 @@
   <form class="edit-post-form">
     <div>
       <input name="post-title" type="text" value="{{post.title}}" />
-      <span>({{format_url post.body}})</span>
+      <span>({{post.body}})</span>
     </div>
     <div>
- by you on {{format_date post.created_at}}
+      Posted by you on {{format_date post.created_at}}
       |
       <a href="/post/{{post.id}}">{{post.comments.length}} {{format_plural "comment" post.comments.length}}</a>
     </div>
