--- a/views/partials/post-info.handlebars
+++ b/views/partials/post-info.handlebars
@@ -1,9 +1,11 @@
 <article class="post">
   <div class="title">
     <p>{{title}}</p>
+    <p>Posted by {{user.username}} on {{format_date createdAt}}</p>
   </div>
   <div class="meta">
-    by {{user.username}} on {{format_date createdAt}}
+    <p>{{post.body}}</p>
+    Posted by {{user.username}} on {{format_date createdAt}}
     |
     <a href="/post/{{id}}">{{comments.length}} {{format_plural "comment" comments.length}}</a>
   </div>
